--- a/_posts/2017-09-04-bitdice.md
+++ b/_posts/2017-09-04-bitdice.md
@@ -75,4 +75,6 @@ You can watch this video to see me walk through the projection in detail:
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/0oVlJezAWVU" frameborder="0" allowfullscreen></iframe>
 
+You can find my financial model <a href = 'https://docs.google.com/spreadsheets/d/15vOZ9tjHpYhbfYxzCzLANaeCXB3jnPcTVSlY5DIqmGM/edit#gid=0'>here</a>. You can feel free to comment on it in the sheet! Let me know what you think!
+
 You can create your own projections too! Comment below to let me know what you think! And if you like what you see, you can partitipate in the ICO <a href = 'https://ico.bitdice.me/'>here</a>.
