--- a/_posts/2017-09-04-bitdice.md
+++ b/_posts/2017-09-04-bitdice.md
@@ -10,7 +10,7 @@ BitDice Casino is currently in the middle of an <a href = 'https://ico.bitdice.m
 
 This is an interesting ICO that is particularly investor-friendly compared to most recent ICOs. It is investor-friendly because there is already a lot of information about BitDice and the industry it operates in that is publicly available. Additionally, BitDice has been in existence since 2014 and is already operating profitably. The token is also somewhat unique in that it offers quarterly dividend payouts -- 70% of BitDice profits will be paid out to token holders.
 
-In this post, I will give an overview of what BitDice is and why it's doing an ICO, talk about the investment pros and cons, and finish up with a financial model of BitDice with a <a href = 'https://youtu.be/0oVlJezAWVU'>video walkthrough</a> of model details.
+In this post, I will give an overview of what BitDice is and why it's doing an ICO, talk about the investment pros and cons, and finish up with a financial model of BitDice with a <a href = 'https://youtu.be/ScSVSiiLC8A'>video walkthrough</a> of model details.
 
 <strong>What is BitDice?</strong>
 
@@ -73,7 +73,7 @@ The great thing about this ICO is that investors actually have enough informatio
 
 You can watch this video to see me walk through the projection in detail:
 
-<iframe width="560" height="315" src="https://www.youtube.com/embed/0oVlJezAWVU" frameborder="0" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/ScSVSiiLC8A" frameborder="0" allowfullscreen></iframe>
 
 You can find my financial model <a href = 'https://docs.google.com/spreadsheets/d/15vOZ9tjHpYhbfYxzCzLANaeCXB3jnPcTVSlY5DIqmGM/edit#gid=0'>here</a>. You can feel free to comment on it in the sheet! Let me know what you think!
 
